added new animations to background

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Botirjon Shokirov</title>
+    <!-- <link rel="stylesheet" href="./style.css" /> -->
+    <link rel="stylesheet" href="../src/index.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="container1"></div>
   </body>
 </html>
